[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
three-d = { git = "https://github.com/asny/three-d", features = ["egui-gui"] }
three-d-asset = { git="https://github.com/asny/three-d-asset", features = ["obj", "png", "http"] }

tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }